--- a/trilha2_componentes/src/index.css
+++ b/trilha2_componentes/src/index.css
@@ -11,6 +11,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+}
+
+.titulo {
+  color: red;
 }
 
 a {
